Adding Pg Scaffold and Model

--- a/app/views/sharent/action.html.erb
+++ b/app/views/sharent/action.html.erb
@@ -1,2 +1,15 @@
-<h1>Sharent#action</h1>
-<p>Find me in app/views/sharent/action.html.erb</p>
+<div>
+  <div>
+    Welcome
+  </div>
+  <div>
+    <div>
+      <%= link_to "Add new Paying Guest", new_pg_path %>
+      </br>
+    </div>
+    <div>
+      <%= link_to "List all Paying Guest(s)", pgs_path %>
+      </br>
+    </div>
+  </div>
+</div>
