--- a/app/views/pgs/index.html.erb
+++ b/app/views/pgs/index.html.erb
@@ -5,6 +5,8 @@
 <table>
   <thead>
     <tr>
+      <th>PG Name</th>
+      <th>Address</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +14,12 @@
   <tbody>
     <% @pgs.each do |pg| %>
       <tr>
+        <td><%= pg.pg_name %></td>
+        <td><%= pg.address %>, 
+          <%= Area.find(pg.area_id).name %>, 
+          <%= City.find(pg.city_id).name %>, 
+          <%= State.find(pg.state_id).name %>
+        </td>
         <td><%= link_to 'Show', pg %></td>
         <td><%= link_to 'Edit', edit_pg_path(pg) %></td>
         <td><%= link_to 'Destroy', pg, method: :delete, data: { confirm: 'Are you sure?' } %></td>
