--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -25,5 +25,6 @@
   <%= @room.number_of_beds %>
 </p>
 
+<%= link_to 'Add Bed', new_bed_path(room_id: @room.id) %> |
 <%= link_to 'Edit', edit_room_path(@room) %> |
 <%= link_to 'Back', rooms_path %>
