--- a/app/views/beds/show.html.erb
+++ b/app/views/beds/show.html.erb
@@ -31,4 +31,4 @@
 </p>
 
 <%= link_to 'Edit', edit_bed_path(@bed) %> |
-<%= link_to 'Back', beds_path %>
+<%= link_to 'Back', beds_path(room_id: @bed.room_id) %>
