--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Room</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', rooms_path %>
+<%= @room.pg_id %>
+<%= link_to 'Back', rooms_path(pg_id: @room.pg_id) %>
