--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,21 @@
             <li>
               <%= link_to "Actions", sharent_action_path %>
             </li>
+            <% unless user_signed_in? %>
+            <li>
+              <%= link_to "Sign In", new_user_session_path %>
+            </li>
+            <% else %>
+            <li>
+              <%= link_to "Sign Out", destroy_user_session_path, method: "DELETE" %>
+            </li>
+            <% end %>
           </ul>
       </div>
     </header>
     <div>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
       <%= yield %>
     </div>
   </div>
