--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,11 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
+  <div class="field">
+    <%= f.label :owner %><br />
+    <%= f.check_box :owner %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
