--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,17 +17,19 @@
             <li>
               <%= link_to "Contact Us", sharent_contact_path %>
             </li>
-            <li>
-              <%= link_to "Actions", sharent_action_path %>
-            </li>
+            <% if (user_signed_in? and current_user.owner?) %>
+              <li>
+                <%= link_to "Actions", sharent_action_path %>
+              </li>
+            <% end %>
             <% unless user_signed_in? %>
-            <li>
-              <%= link_to "Sign In", new_user_session_path %>
-            </li>
+              <li>
+                <%= link_to "Sign In", new_user_session_path %>
+              </li>
             <% else %>
-            <li>
-              <%= link_to "Sign Out", destroy_user_session_path, method: "DELETE" %>
-            </li>
+              <li>
+                <%= link_to "Sign Out", destroy_user_session_path, method: "DELETE" %>
+              </li>
             <% end %>
           </ul>
       </div>
