--- a/app/views/sharent/book.html.erb
+++ b/app/views/sharent/book.html.erb
@@ -12,8 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :pg_id %><br>
-    <%= f.text_field :pg_id, value: @enquiry.pg_id, readonly: true %>
+    <%= f.hidden_field :pg_id, value: @enquiry.pg_id, readonly: true %>
+  </div>
+  <div class="field">
+    <%= f.label :pg_name %><br>
+    <%= f.text_field :pg_name, value: Pg.find(@enquiry.pg_id).pg_name, readonly: true %>
   </div>
   <div class="field">
     <%= f.label :full_name %><br>
